syntax = "proto3";

package com.road.yishi.proto.active;

message FirstChargeAwardInfo {
  int32 days = 1;
  int32 state = 2;
  int32 type = 3;
}
