syntax = "proto3";

package com.road.yishi.proto.active;

message TakeFirstChargeAwardReq {
  int32 type = 1;
}
